<resources>
    <string name="app_name">expected keyboard</string>
    <string name="app_name_release">expected keyboard</string>
    <string name="short_description">Lightweight and privacy-conscious virtual keyboard for Android.</string>
    <string name="store_description">The main feature is that you can type more characters by swiping the keys towards the corners.\n\nThis application was originally designed for programmers using Termux.\nNow perfect for everyday use.\n\nThis application contains no ads and is Open Source.</string>
    <string name="pref_portrait">In portrait mode</string>
    <string name="pref_portrait_unfolded">In portrait mode unfolded</string>
    <string name="pref_landscape">In landscape mode</string>
    <string name="pref_landscape_unfolded">In landscape mode unfolded</string>
    <string name="pref_category_layout">Layout</string>
    <string name="pref_label_brightness">Adjust label brightness</string>
    <string name="pref_keyboard_opacity">Adjust keyboard background opacity</string>
    <string name="pref_key_opacity">Adjust key opacity</string>
    <string name="pref_key_activated_opacity">Adjust pressed key opacity</string>
    <string name="pref_layout_e_system">System settings</string>
    <string name="pref_layout_e_custom">Custom layout</string>
    <string name="pref_layouts_add">Add an alternate layout</string>
    <string name="pref_layouts_item">Layout %1$d: %2$s</string>
    <string name="pref_layouts_remove_custom">Remove layout</string>
    <string name="pref_custom_layout_title">Custom layout</string>
    <string name="pref_show_number_row_no_number_row">No number row</string>
    <string name="pref_show_number_row_no_symbols">Number row without symbols</string>
    <string name="pref_show_number_row_symbols">Number row with symbols</string>
    <string name="pref_show_numpad_title">Show NumPad</string>
    <string name="pref_show_numpad_never">Never</string>
    <string name="pref_show_numpad_landscape">Only in landscape mode</string>
    <string name="pref_show_numpad_always">Always</string>
    <string name="pref_number_row_title">Show number row</string>
    <string name="pref_numpad_layout">NumPad layout</string>
    <string name="pref_numpad_layout_e_high_first">High digits first</string>
    <string name="pref_numpad_layout_e_low_first">Low digits first</string>
    <string name="pref_extra_keys_title">Add keys to the keyboard</string>
    <string name="pref_extra_keys_custom">Add custom keys</string>
    <string name="pref_extra_keys_internal">Select keys to add to the keyboard</string>
    <string name="pref_category_prediction">Prediction &amp; Autocorrection</string>
    <string name="pref_category_suggestions">Prediction &amp; Autocorrection</string>
    <string name="pref_suggestions_title">Show suggestions</string>
    <string name="pref_suggestions_summary">Show prediction bar with word completions and emoji suggestions</string>
    <string name="pref_autocorrect_title">Auto-correction</string>
    <string name="pref_autocorrect_summary">Automatically correct misspelled words when pressing space bar</string>
    <string name="pref_space_bar_auto_complete_title">Space bar autocompletion</string>
    <string name="pref_space_bar_auto_complete_summary">Insert the highest-ranked suggestion when pressing space</string>
    <string name="pref_category_typing">Typing</string>
    <string name="pref_swipe_dist_title">Swiping distance</string>
    <string name="pref_swipe_dist_summary">Distance of characters in the corners of the keys (%s)</string>
    <string name="pref_long_timeout_title">Long press timeout</string>
    <string name="pref_long_interval_title">Key repeat interval</string>
    <string name="pref_key_fade_duration_title">Key fade in &amp; out</string>
    <string name="pref_key_fade_duration_summary">Key typing and pressed color fade duration (%s)</string>
    <string name="pref_keyrepeat_enabled">Key repeat on long press</string>
    <string name="pref_lock_double_tap_title">Double tap on shift for caps lock</string>
    <string name="pref_lock_double_tap_summary">You can lock any modifier by holding it</string>
    <string name="pref_category_behavior">Behavior</string>
    <string name="pref_autocapitalisation_title">Automatic capitalisation</string>
    <string name="pref_autocapitalisation_summary">Press Shift at the beginning of a sentence</string>
    <string name="pref_change_method_key_replacement_title">Switching between input methods</string>
    <string name="pref_change_method_key_replacement_e_picker">Show the input method picker (long press)</string>
    <string name="pref_change_method_key_replacement_e_prev">Switch to last used</string>
    <string name="pref_change_method_key_replacement_e_next">Switch to the next in the list</string>
    <string name="pref_vibrate_custom">Custom vibration</string>
    <string name="pref_vibrate_duration_title">Vibration intensity</string>
    <string name="pref_number_entry_title">Layout when typing numbers, dates, and phone numbers</string>
    <string name="pref_number_entry_layout_pin">PIN Entry</string>
    <string name="pref_number_entry_layout_number">Number pane</string>
    <string name="pref_number_entry_layout_normal">Use the main layout</string>
    <string name="pref_category_style">Style</string>
    <string name="pref_margin_bottom_title">Margin bottom</string>
    <string name="pref_keyboard_height_title">Keyboard height</string>
    <string name="pref_horizontal_margin_title">Horizontal margin</string>
    <string name="pref_character_size_title">Label size</string>
    <string name="pref_character_size_summary">Size of characters displayed on the keyboard (%.2fx)</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_theme_e_system">System settings</string>
    <string name="pref_theme_e_dark">Dark</string>
    <string name="pref_theme_e_light">Light</string>
    <string name="pref_theme_e_black">Black</string>
    <string name="pref_theme_e_altblack">Alternative Black</string>
    <string name="pref_theme_e_white">White</string>
    <string name="pref_theme_e_epaper">ePaper</string>
    <string name="pref_theme_e_desert">Desert</string>
    <string name="pref_theme_e_jungle">Jungle</string>
    <string name="pref_theme_e_material3">Material 3 (System)</string>
    <string name="pref_theme_e_material3light">Material 3 (Light)</string>
    <string name="pref_theme_e_material3dark">Material 3 (Dark)</string>
    <string name="pref_theme_e_monet">Monet (System)</string>
    <string name="pref_theme_e_monetlight">Monet (Light)</string>
    <string name="pref_theme_e_monetdark">Monet (Dark)</string>
    <string name="pref_theme_e_rosepine">Rosé Pine</string>
    <string name="pref_theme_e_everforestlight">Everforest Light</string>
    <string name="pref_theme_e_cobalt">Cobalt</string>
    <string name="pref_theme_e_pine">Pine</string>
    <string name="pref_theme_e_epaperblack">ePaper Black</string>
    <string name="pref_theme_e_dracula">Dracula</string>
    <string name="pref_theme_e_frostedobsidian">Frosted Obsidian (Glass)</string>
    <string name="pref_theme_e_cyberneon">Cyber Neon</string>
    <string name="pref_theme_e_custom">Custom Theme</string>
    <string name="pref_swipe_dist_e_very_short">Very short</string>
    <string name="pref_swipe_dist_e_short">Short</string>
    <string name="pref_swipe_dist_e_default">Normal</string>
    <string name="pref_swipe_dist_e_far">Far</string>
    <string name="pref_swipe_dist_e_very_far">Very far</string>
    <string name="pref_suggestion_font_scale_title">Suggestion text size</string>
    <string name="pref_suggestion_font_scale_summary">Adjust font size for prediction bar (%.2fx)</string>
    <string name="pref_show_suggestion_bar_title">Show suggestion bar</string>
    <string name="pref_show_suggestion_bar_summary">Keep bar always visible (never disappears until disabled)</string>
    <string name="pref_terminal_commands_title">Terminal commands</string>
    <string name="pref_terminal_commands_summary">Custom commands for Termux / terminal apps</string>
    <string name="pref_learned_words_title">Learned words</string>
    <string name="pref_learned_words_summary">View, delete, and block learned words</string>
    <string name="pref_custom_extensions_title">Custom extensions (. key)</string>
    <string name="pref_custom_extensions_summary">Add, edit extensions for the dot popup</string>
    <string name="pref_custom_emails_title">Custom emails</string>
    <string name="pref_custom_emails_summary">Emails shown in login/email fields</string>
    <string name="pref_key_horizontal_space">Horizontal spacing between the keys</string>
    <string name="pref_key_vertical_space">Vertical spacing between the keys</string>
    <string name="pref_border_config_title">Customize borders</string>
    <string name="pref_border_width_title">Border Width</string>
    <string name="pref_corners_radius_title">Corner radius</string>
    <string name="pref_circle_sensitivity_title">Circle gesture sensitivity</string>
    <string name="pref_circle_sensitivity_e_high">High</string>
    <string name="pref_circle_sensitivity_e_medium">Medium</string>
    <string name="pref_circle_sensitivity_e_low">Low</string>
    <string name="pref_circle_sensitivity_e_disabled">Disabled</string>
    <string name="pref_slider_sensitivity_title">Space bar slider sensitivity</string>
    <string name="pref_slider_sensitivity_slow">Slow</string>
    <string name="pref_slider_sensitivity_medium">Medium</string>
    <string name="pref_slider_sensitivity_fast">Fast</string>
    <string name="key_action_next">Next</string>
    <string name="key_action_done">Done</string>
    <string name="key_action_go">Go</string>
    <string name="key_action_prev">Prev</string>
    <string name="key_action_search">Search</string>
    <string name="key_action_send">Send</string>
    <string name="launcher_button_imesettings">Enable keyboard</string>
    <string name="launcher_button_imepicker">Select keyboard</string>
    <string name="launcher_button_dictionaries">Install dictionaries</string>
    <string name="launcher_description">A fast, privacy-focused keyboard with corner swipe gestures, neural-grade offline prediction, and customizable layouts.</string>
    <string name="futo_status_active">ACTIVE &amp; READY</string>
    <string name="futo_status_setup_needed">SETUP REQUIRED</string>
    <string name="futo_status_enabled">ENABLED</string>
    <string name="futo_status_not_enabled">NOT ENABLED</string>
    <string name="futo_step_enable_title">1. Enable in Settings</string>
    <string name="futo_step_enable_sub">Turn on expected keyboard in Android input methods</string>
    <string name="futo_step_select_title">2. Select Active Keyboard</string>
    <string name="futo_step_select_sub">Switch current input method to expected keyboard</string>
    <string name="futo_step_dict_title">3. Manage Dictionaries</string>
    <string name="futo_step_dict_sub">Download and manage offline dictionary packs</string>
    <string name="futo_sec_layouts_title">Layouts &amp; Keys</string>
    <string name="futo_sec_layouts_sub">QWERTY, Dvorak, Colemak, NumPad &amp; custom keys</string>
    <string name="futo_sec_prediction_title">Prediction &amp; Autocorrection</string>
    <string name="futo_sec_prediction_sub">Prefix lookup, autocorrect toggle &amp; user learning</string>
    <string name="futo_sec_theme_title">Theme &amp; Appearance</string>
    <string name="futo_sec_theme_sub">Frosted Obsidian, Cyber Neon, opacity &amp; borders</string>
    <string name="futo_sec_typing_title">Typing &amp; Gestures</string>
    <string name="pref_category_clipboard">Clipboard</string>
    <string name="pref_clipboard_history_duration">Clipboard memory duration</string>
    <string name="pref_physical_keyboard_behavior">When a physical keyboard is connected</string>
    <string name="pref_split_layout">Split layout</string>
</resources>