<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
  <PreferenceCategory android:title="@string/pref_category_prediction">
    <CheckBoxPreference android:key="suggestions" android:title="@string/pref_suggestions_title" android:summary="@string/pref_suggestions_summary" android:defaultValue="true"/>
    <CheckBoxPreference android:key="autocorrect" android:title="@string/pref_autocorrect_title" android:summary="@string/pref_autocorrect_summary" android:defaultValue="true" android:dependency="suggestions"/>
    <CheckBoxPreference android:key="space_bar_auto_complete" android:title="@string/pref_space_bar_auto_complete_title" android:summary="@string/pref_space_bar_auto_complete_summary" android:defaultValue="false" android:dependency="suggestions"/>
    <expected.keyboard2.prefs.SlideBarPreference android:key="suggestion_font_scale" android:title="@string/pref_suggestion_font_scale_title" android:summary="@string/pref_suggestion_font_scale_summary" android:defaultValue="1.0" min="0.7" max="1.8" android:dependency="suggestions"/>
    <CheckBoxPreference android:key="show_suggestion_bar" android:title="@string/pref_show_suggestion_bar_title" android:summary="@string/pref_show_suggestion_bar_summary" android:defaultValue="true"/>
    <expected.keyboard2.prefs.TerminalCommandsPreference android:key="terminal_commands_pref" android:title="@string/pref_terminal_commands_title" android:summary="@string/pref_terminal_commands_summary"/>
    <expected.keyboard2.prefs.LearnedWordsPreference android:key="learned_words_pref" android:title="@string/pref_learned_words_title" android:summary="@string/pref_learned_words_summary"/>
    <expected.keyboard2.prefs.CustomExtensionsPreference android:key="custom_extensions_pref" android:title="@string/pref_custom_extensions_title" android:summary="@string/pref_custom_extensions_summary"/>
    <expected.keyboard2.prefs.CustomEmailsPreference android:key="custom_emails_pref" android:title="@string/pref_custom_emails_title" android:summary="@string/pref_custom_emails_summary"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_category_layout">
    <expected.keyboard2.prefs.LayoutsPreference/>
    <PreferenceScreen android:title="@string/pref_extra_keys_title">
      <PreferenceCategory android:title="@string/pref_extra_keys_custom">
        <expected.keyboard2.prefs.CustomExtraKeysPreference/>
      </PreferenceCategory>
      <expected.keyboard2.prefs.ExtraKeysPreference android:title="@string/pref_extra_keys_internal"/>
    </PreferenceScreen>
    <ListPreference android:key="show_numpad" android:title="@string/pref_show_numpad_title" android:summary="%s" android:defaultValue="1" android:entries="@array/pref_show_numpad_entries" android:entryValues="@array/pref_show_numpad_values"/>
    <ListPreference android:key="numpad_layout" android:title="@string/pref_numpad_layout" android:summary="%s" android:defaultValue="low_first" android:entries="@array/pref_numpad_layout_entries" android:entryValues="@array/pref_numpad_layout_values"/>
    <ListPreference android:key="split_layout" android:title="@string/pref_split_layout" android:summary="%s" android:defaultValue="never" android:entries="@array/pref_split_layout_entries" android:entryValues="@array/pref_split_layout_values"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_category_typing">
    <ListPreference android:key="swipe_dist" android:title="@string/pref_swipe_dist_title" android:summary="@string/pref_swipe_dist_summary" android:defaultValue="35" android:entries="@array/pref_swipe_dist_entries" android:entryValues="@array/pref_swipe_dist_values"/>
    <ListPreference android:key="circle_sensitivity" android:title="@string/pref_circle_sensitivity_title" android:summary="%s" android:defaultValue="2" android:entries="@array/pref_circle_sensitivity_entries" android:entryValues="@array/pref_circle_sensitivity_values"/>
    <expected.keyboard2.prefs.IntSlideBarPreference android:key="longpress_timeout" android:title="@string/pref_long_timeout_title" android:summary="%sms" android:defaultValue="240" min="50" max="2000"/>
    <CheckBoxPreference android:key="keyrepeat_enabled" android:title="@string/pref_keyrepeat_enabled" android:defaultValue="true"/>
    <expected.keyboard2.prefs.IntSlideBarPreference android:key="longpress_interval" android:dependency="keyrepeat_enabled" android:title="@string/pref_long_interval_title" android:summary="%sms" android:defaultValue="5" min="5" max="100"/>
    <CheckBoxPreference android:key="lock_double_tap" android:title="@string/pref_lock_double_tap_title" android:summary="@string/pref_lock_double_tap_summary" android:defaultValue="true"/>
    <ListPreference android:key="physical_keyboard_behavior" android:title="@string/pref_physical_keyboard_behavior" android:summary="%s" android:defaultValue="show" android:entries="@array/pref_physical_keyboard_behavior_entries" android:entryValues="@array/pref_physical_keyboard_behavior_values"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_category_behavior">
    <CheckBoxPreference android:key="autocapitalisation" android:title="@string/pref_autocapitalisation_title" android:summary="@string/pref_autocapitalisation_summary" android:defaultValue="true"/>
    <ListPreference android:key="change_method_key_replacement" android:title="@string/pref_change_method_key_replacement_title" android:summary="%s" android:entries="@array/pref_change_method_key_replacement_entries" android:entryValues="@array/pref_change_method_key_replacement_values" android:defaultValue="prev"/>
    <CheckBoxPreference android:key="vibrate_custom" android:title="@string/pref_vibrate_custom" android:defaultValue="false"/>
    <expected.keyboard2.prefs.IntSlideBarPreference android:dependency="vibrate_custom" android:key="vibrate_duration" android:title="@string/pref_vibrate_duration_title" android:summary="%sms" android:defaultValue="20" min="0" max="100"/>
    <ListPreference android:key="number_entry_layout" android:title="@string/pref_number_entry_title" android:summary="%s" android:defaultValue="pin" android:entries="@array/pref_number_entry_entries" android:entryValues="@array/pref_number_entry_values"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_category_style">
    <ListPreference android:key="theme" android:title="@string/pref_theme" android:summary="%s" android:defaultValue="frostedobsidian" android:entries="@array/pref_theme_entries" android:entryValues="@array/pref_theme_values"/>
    <expected.keyboard2.prefs.IntSlideBarPreference android:key="label_brightness" android:title="@string/pref_label_brightness" android:summary="%s%%" android:defaultValue="100" min="50" max="100"/>
    <expected.keyboard2.prefs.IntSlideBarPreference android:key="keyboard_opacity" android:title="@string/pref_keyboard_opacity" android:summary="%s%%" android:defaultValue="100" min="0" max="100"/>
    <expected.keyboard2.prefs.IntSlideBarPreference android:key="key_opacity" android:title="@string/pref_key_opacity" android:summary="%s%%" android:defaultValue="100" min="0" max="100"/>
    <expected.keyboard2.prefs.IntSlideBarPreference android:key="key_activated_opacity" android:title="@string/pref_key_activated_opacity" android:summary="%s%%" android:defaultValue="100" min="0" max="100"/>
    <PreferenceScreen android:title="@string/pref_margin_bottom_title">
      <expected.keyboard2.prefs.IntSlideBarPreference android:key="margin_bottom_portrait" android:title="@string/pref_portrait" android:summary="%sdp" android:defaultValue="7" min="0" max="250"/>
      <expected.keyboard2.prefs.IntSlideBarPreference android:key="margin_bottom_landscape" android:title="@string/pref_landscape" android:summary="%sdp" android:defaultValue="3" min="0" max="120"/>
      <expected.keyboard2.prefs.IntSlideBarPreference android:key="margin_bottom_portrait_unfolded" android:title="@string/pref_portrait_unfolded" android:summary="%sdp" android:defaultValue="7" min="0" max="250"/>
      <expected.keyboard2.prefs.IntSlideBarPreference android:key="margin_bottom_landscape_unfolded" android:title="@string/pref_landscape_unfolded" android:summary="%sdp" android:defaultValue="3" min="0" max="250"/>
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/pref_keyboard_height_title">
      <expected.keyboard2.prefs.IntSlideBarPreference android:key="keyboard_height" android:title="@string/pref_portrait" android:summary="%s%%" android:defaultValue="25" min="10" max="100"/>
      <expected.keyboard2.prefs.IntSlideBarPreference android:key="keyboard_height_landscape" android:title="@string/pref_landscape" android:summary="%s%%" android:defaultValue="50" min="20" max="65"/>
      <expected.keyboard2.prefs.IntSlideBarPreference android:key="keyboard_height_unfolded" android:title="@string/pref_portrait_unfolded" android:summary="%s%%" android:defaultValue="25" min="10" max="50"/>
      <expected.keyboard2.prefs.IntSlideBarPreference android:key="keyboard_height_landscape_unfolded" android:title="@string/pref_landscape_unfolded" android:summary="%s%%" android:defaultValue="50" min="20" max="65"/>
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/pref_horizontal_margin_title">
      <expected.keyboard2.prefs.IntSlideBarPreference android:key="horizontal_margin_portrait" android:title="@string/pref_portrait" android:summary="%sdp" android:defaultValue="3" min="0" max="30"/>
      <expected.keyboard2.prefs.IntSlideBarPreference android:key="horizontal_margin_landscape" android:title="@string/pref_landscape" android:summary="%sdp" android:defaultValue="28" min="0" max="200"/>
      <expected.keyboard2.prefs.IntSlideBarPreference android:key="horizontal_margin_portrait_unfolded" android:title="@string/pref_portrait_unfolded" android:summary="%sdp" android:defaultValue="3" min="0" max="30"/>
      <expected.keyboard2.prefs.IntSlideBarPreference android:key="horizontal_margin_landscape_unfolded" android:title="@string/pref_landscape_unfolded" android:summary="%sdp" android:defaultValue="28" min="0" max="200"/>
    </PreferenceScreen>
    <expected.keyboard2.prefs.SlideBarPreference android:key="character_size" android:title="@string/pref_character_size_title" android:summary="@string/pref_character_size_summary" android:defaultValue="1.15" min="0.75" max="1.5"/>
    <expected.keyboard2.prefs.SlideBarPreference android:key="key_vertical_margin" android:title="@string/pref_key_vertical_space" android:summary="%s%%" android:defaultValue="1.5" min="0" max="5"/>
    <expected.keyboard2.prefs.SlideBarPreference android:key="key_horizontal_margin" android:title="@string/pref_key_horizontal_space" android:summary="%s%%" android:defaultValue="2" min="0" max="5"/>
    <CheckBoxPreference android:key="border_config" android:title="@string/pref_border_config_title" android:defaultValue="true"/>
    <expected.keyboard2.prefs.IntSlideBarPreference android:key="custom_border_radius" android:title="@string/pref_corners_radius_title" android:summary="%s%%" android:defaultValue="0" min="0" max="100" android:dependency="border_config"/>
    <expected.keyboard2.prefs.SlideBarPreference android:key="custom_border_line_width" android:title="@string/pref_border_width_title" android:summary="%sdp" android:defaultValue="0" min="0" max="5" android:dependency="border_config"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_category_clipboard">
    <ListPreference android:key="clipboard_history_duration" android:title="@string/pref_clipboard_history_duration" android:summary="%s" android:defaultValue="5" android:entries="@array/pref_clipboard_duration_entries" android:entryValues="@array/pref_clipboard_duration_values"/>
  </PreferenceCategory>
</PreferenceScreen>
