<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory android:title="@string/pref_category_layout">
    <expected.keyboard2.prefs.LayoutsPreference/>
    <PreferenceScreen android:title="@string/pref_extra_keys_title">
      <PreferenceCategory android:title="@string/pref_extra_keys_custom">
        <expected.keyboard2.prefs.CustomExtraKeysPreference/>
      </PreferenceCategory>
      <expected.keyboard2.prefs.ExtraKeysPreference android:title="@string/pref_extra_keys_internal"/>
    </PreferenceScreen>
    <ListPreference android:key="show_numpad" android:title="@string/pref_show_numpad_title" android:summary="%s" android:defaultValue="1" android:entries="@array/pref_show_numpad_entries" android:entryValues="@array/pref_show_numpad_values"/>
    <ListPreference android:key="numpad_layout" android:title="@string/pref_numpad_layout" android:summary="%s" android:defaultValue="low_first" android:entries="@array/pref_numpad_layout_entries" android:entryValues="@array/pref_numpad_layout_values"/>
    <ListPreference android:key="split_layout" android:title="@string/pref_split_layout" android:summary="%s" android:defaultValue="never" android:entries="@array/pref_split_layout_entries" android:entryValues="@array/pref_split_layout_values"/>
  </PreferenceCategory>
</PreferenceScreen>
